--- a/src/CasinovaAll/Silverlights/SilverlightWeb/SilverlightWeb.csproj
+++ b/src/CasinovaAll/Silverlights/SilverlightWeb/SilverlightWeb.csproj
@@ -14,7 +14,7 @@
     <AssemblyName>SilverlightWeb</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
-    <SilverlightApplicationList>{9DAC2F48-9F6C-4349-A806-5267DE225A27}|..\CasinovaAllStars\CasinovaAllStars.csproj|ClientBin|False,{BFDA5F01-0ED8-45E3-BF5A-33060035EE6E}|..\TheS.Casinova.Colors.Silverlight\TheS.Casinova.Colors.Silverlight.csproj|ClientBin|False,{F7F57B1A-9AE2-4D9A-B106-57D4DFAF6B80}|..\..\Silverlight.Specs\TheS.Casinova.Colors.Specs.Silverlight\TheS.Casinova.Colors.Specs.Silverlight.csproj|ClientBin|False,{0DFECD7E-1363-406E-A492-3ABFD06E18D7}|..\TheS.Casinova.TwoWins.Silverlight\TheS.Casinova.TwoWins.Silverlight.csproj|ClientBin|False,{C8789CB7-3EB0-44FE-BC6C-5B530E80D15A}|..\TheS.Casinova.MagicNine.Silverlight\TheS.Casinova.MagicNine.Silverlight.csproj|ClientBin|False,{1621C1D1-A6CE-4327-84FD-E89241BB6D56}|..\TheS.Casinova.DevilSix.Silverlight\TheS.Casinova.DevilSix.Silverlight.csproj|ClientBin|False,{56389D5F-1DA5-4FD5-8429-C53AB79753AB}|..\..\Silverlight.Specs\TheS.Casinova.DevilSix.Specs.Silverlight\TheS.Casinova.DevilSix.Specs.Silverlight.csproj|ClientBin|False,{114C6F3D-38A0-4961-98F4-9ABEFF6E528B}|..\..\Silverlight.Specs\TheS.Casinova.MagicNine.Specs.Silverlight\TheS.Casinova.MagicNine.Specs.Silverlight.csproj|ClientBin|False,{0B269EFD-8716-401A-8013-D6720A8B901B}|..\..\Silverlight.Specs\TheS.Casinova.TwoWins.Specs.Silverlight\TheS.Casinova.TwoWins.Specs.Silverlight.csproj|ClientBin|False</SilverlightApplicationList>
+    <SilverlightApplicationList>{9DAC2F48-9F6C-4349-A806-5267DE225A27}|..\CasinovaAllStars\CasinovaAllStars.csproj|ClientBin|False,{BFDA5F01-0ED8-45E3-BF5A-33060035EE6E}|..\TheS.Casinova.Colors.Silverlight\TheS.Casinova.Colors.Silverlight.csproj|ClientBin|False,{F7F57B1A-9AE2-4D9A-B106-57D4DFAF6B80}|..\..\Silverlight.Specs\TheS.Casinova.Colors.Specs.Silverlight\TheS.Casinova.Colors.Specs.Silverlight.csproj|ClientBin|False,{0DFECD7E-1363-406E-A492-3ABFD06E18D7}|..\TheS.Casinova.TwoWins.Silverlight\TheS.Casinova.TwoWins.Silverlight.csproj|ClientBin|False,{C8789CB7-3EB0-44FE-BC6C-5B530E80D15A}|..\TheS.Casinova.MagicNine.Silverlight\TheS.Casinova.MagicNine.Silverlight.csproj|ClientBin|False,{1621C1D1-A6CE-4327-84FD-E89241BB6D56}|..\TheS.Casinova.DevilSix.Silverlight\TheS.Casinova.DevilSix.Silverlight.csproj|ClientBin|False,{56389D5F-1DA5-4FD5-8429-C53AB79753AB}|..\..\Silverlight.Specs\TheS.Casinova.DevilSix.Specs.Silverlight\TheS.Casinova.DevilSix.Specs.Silverlight.csproj|ClientBin|False,{114C6F3D-38A0-4961-98F4-9ABEFF6E528B}|..\..\Silverlight.Specs\TheS.Casinova.MagicNine.Specs.Silverlight\TheS.Casinova.MagicNine.Specs.Silverlight.csproj|ClientBin|False,{0B269EFD-8716-401A-8013-D6720A8B901B}|..\..\Silverlight.Specs\TheS.Casinova.TwoWins.Specs.Silverlight\TheS.Casinova.TwoWins.Specs.Silverlight.csproj|ClientBin|False,{B82D39DB-A76D-4E1B-BC4B-279D6608A2EE}|..\TheS.Casinova.SupportContent.Silverlight\TheS.Casinova.SupportContent.Silverlight.csproj|ClientBin|False,{56F52A3E-4ECF-4E21-BBBD-EFB2E05F821E}|..\TheS.Casinova.Fortune.Silverlight\TheS.Casinova.Fortune.Silverlight.csproj|ClientBin|False,{8A17DC2D-1768-4AAA-B994-97E37A8CCCC8}|..\TheS.Casinova.Chat.Silverlight\TheS.Casinova.Chat.Silverlight.csproj|ClientBin|False,{6609B33D-D607-4E8C-A176-9017D50E2A09}|..\TheS.Casinova.PlayerAccount.Silverlight\TheS.Casinova.PlayerAccount.Silverlight.csproj|ClientBin|False</SilverlightApplicationList>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -78,16 +78,22 @@
     <Content Include="CasinovaAllStarsTestPage.aspx" />
     <Content Include="CasinovaAllStarsTestPage.html" />
     <Content Include="ClientBin\CasinovaAllStars.xap" />
+    <Content Include="ClientBin\TheS.Casinova.Chat.Silverlight.xap" />
     <Content Include="ClientBin\TheS.Casinova.Colors.Silverlight.xap" />
     <Content Include="ClientBin\TheS.Casinova.Colors.Specs.Silverlight.xap" />
     <Content Include="ClientBin\TheS.Casinova.DevilSix.Silverlight.xap" />
     <Content Include="ClientBin\TheS.Casinova.DevilSix.Specs.Silverlight.xap" />
+    <Content Include="ClientBin\TheS.Casinova.Fortune.Silverlight.xap" />
     <Content Include="ClientBin\TheS.Casinova.MagicNine.Silverlight.xap" />
     <Content Include="ClientBin\TheS.Casinova.MagicNine.Specs.Silverlight.xap" />
+    <Content Include="ClientBin\TheS.Casinova.PlayerAccount.Silverlight.xap" />
+    <Content Include="ClientBin\TheS.Casinova.SupportContent.Silverlight.xap" />
     <Content Include="ClientBin\TheS.Casinova.TwoWins.Silverlight.xap" />
     <Content Include="ClientBin\TheS.Casinova.TwoWins.Specs.Silverlight.xap" />
     <Content Include="Global.asax" />
     <Content Include="Silverlight.js" />
+    <Content Include="TheS.Casinova.Chat.SilverlightTestPage.aspx" />
+    <Content Include="TheS.Casinova.Chat.SilverlightTestPage.html" />
     <Content Include="TheS.Casinova.Colors.SilverlightTestPage.aspx" />
     <Content Include="TheS.Casinova.Colors.SilverlightTestPage.html" />
     <Content Include="TheS.Casinova.Colors.Specs.SilverlightTestPage.aspx" />
@@ -96,10 +102,16 @@
     <Content Include="TheS.Casinova.DevilSix.SilverlightTestPage.html" />
     <Content Include="TheS.Casinova.DevilSix.Specs.SilverlightTestPage.aspx" />
     <Content Include="TheS.Casinova.DevilSix.Specs.SilverlightTestPage.html" />
+    <Content Include="TheS.Casinova.Fortune.SilverlightTestPage.aspx" />
+    <Content Include="TheS.Casinova.Fortune.SilverlightTestPage.html" />
     <Content Include="TheS.Casinova.MagicNine.SilverlightTestPage.aspx" />
     <Content Include="TheS.Casinova.MagicNine.SilverlightTestPage.html" />
     <Content Include="TheS.Casinova.MagicNine.Specs.SilverlightTestPage.aspx" />
     <Content Include="TheS.Casinova.MagicNine.Specs.SilverlightTestPage.html" />
+    <Content Include="TheS.Casinova.PlayerAccount.SilverlightTestPage.aspx" />
+    <Content Include="TheS.Casinova.PlayerAccount.SilverlightTestPage.html" />
+    <Content Include="TheS.Casinova.SupportContent.SilverlightTestPage.aspx" />
+    <Content Include="TheS.Casinova.SupportContent.SilverlightTestPage.html" />
     <Content Include="TheS.Casinova.TwoWins.SilverlightTestPage.aspx" />
     <Content Include="TheS.Casinova.TwoWins.SilverlightTestPage.html" />
     <Content Include="TheS.Casinova.TwoWins.Specs.SilverlightTestPage.aspx" />
