--- a/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.Commands/TheS.Casinova.MagicNine.Commands.csproj
+++ b/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.Commands/TheS.Casinova.MagicNine.Commands.csproj
@@ -40,9 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\ListGamePlayAutoBetInfoCommand.cs" />
     <Compile Include="Commands\ListBetLogCommand.cs" />
-    <Compile Include="Commands\ListActiveGameRoundCommand.cs" />
+    <Compile Include="Commands\ListActiveGameRoundInfoCommand.cs" />
     <Compile Include="Commands\SingleBetCommand.cs" />
+    <Compile Include="Commands\StartAutoBetCommand.cs" />
+    <Compile Include="Commands\StopAutoBetCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
