--- a/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.Models/TheS.Casinova.MagicNine.Models.csproj
+++ b/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.Models/TheS.Casinova.MagicNine.Models.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\GamePlayAutoBetInformation.cs" />
     <Compile Include="Models\BetInformation.cs" />
     <Compile Include="Models\GameRoundInformation.cs" />
     <Compile Include="Models\PlayerInformation.cs" />
