--- a/src/CasinovaAll/Specs/TheS.Casinova.MagicNine.WebExecutors.Specs/TheS.Casinova.MagicNine.WebExecutors.Specs.csproj
+++ b/src/CasinovaAll/Specs/TheS.Casinova.MagicNine.WebExecutors.Specs/TheS.Casinova.MagicNine.WebExecutors.Specs.csproj
@@ -60,10 +60,15 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebExecutors\SpecsEventDefinitions.cs" />
-    <Compile Include="WebExecutors\Specs\ListActiveGameRoundFeature.feature.cs">
+    <Compile Include="WebExecutors\Specs\ListActiveGameRoundInfoFeature.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ListActiveGameRoundFeature.feature</DependentUpon>
+      <DependentUpon>ListActiveGameRoundInfoFeature.feature</DependentUpon>
+    </Compile>
+    <Compile Include="WebExecutors\Specs\ListGamePlayAutoBetInfoFeature.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ListGamePlayAutoBetInfoFeature.feature</DependentUpon>
     </Compile>
     <Compile Include="WebExecutors\Specs\SingleBetFeature.feature.cs">
       <AutoGen>True</AutoGen>
@@ -76,7 +81,7 @@
       <DependentUpon>ListBetLogFeature.feature</DependentUpon>
     </Compile>
     <Compile Include="WebExecutors\Specs\Steps\CommonSteps.cs" />
-    <Compile Include="WebExecutors\Specs\Steps\ListActiveGameRoundSteps.cs" />
+    <Compile Include="WebExecutors\Specs\Steps\ListActiveGameRoundInfoSteps.cs" />
     <Compile Include="WebExecutors\Specs\Steps\ListBetLogSteps.cs" />
     <Compile Include="WebExecutors\Specs\Steps\MagicNineGameStepsBase.cs" />
     <Compile Include="WebExecutors\Specs\Steps\SingleBetSteps.cs" />
@@ -118,9 +123,13 @@
   <ItemGroup />
   <ItemGroup>
     <None Include="WebExecutors\App.config" />
-    <None Include="WebExecutors\Specs\ListActiveGameRoundFeature.feature">
+    <None Include="WebExecutors\Specs\ListActiveGameRoundInfoFeature.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>ListActiveGameRoundFeature.feature.cs</LastGenOutput>
+      <LastGenOutput>ListActiveGameRoundInfoFeature.feature.cs</LastGenOutput>
+    </None>
+    <None Include="WebExecutors\Specs\ListGamePlayAutoBetInfoFeature.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>ListGamePlayAutoBetInfoFeature.feature.cs</LastGenOutput>
     </None>
     <None Include="WebExecutors\Specs\SingleBetFeature.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
