Module MagicNine : Recovery AutoBetEngine
Signed-off-by: sirinarin <sirinarin@perfenterprise.com>

--- a/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.BackServices/TheS.Casinova.MagicNine.BackServices.csproj
+++ b/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.BackServices/TheS.Casinova.MagicNine.BackServices.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BackServices\BackExecutors\SingleBetExecutor.cs" />
+    <Compile Include="BackServices\IAutoBetEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
