--- a/src/CasinovaAll/Modules/PlayerProfile/TheS.Casinova.PlayerProfile.Models/TheS.Casinova.PlayerProfile.Models.csproj
+++ b/src/CasinovaAll/Modules/PlayerProfile/TheS.Casinova.PlayerProfile.Models/TheS.Casinova.PlayerProfile.Models.csproj
@@ -40,11 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\ActionLog.cs" />
+    <Compile Include="Models\UserProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\TheS.Casinova.Common.Models\TheS.Casinova.Common.Models.csproj">
       <Project>{6079CFCD-811A-4962-B021-8D3D14C0C45B}</Project>
