Module PlayerProfile : วางโครงของ backend
Signed-off-by: sirinarin <sirinarin@perfenterprise.com>

--- a/src/CasinovaAll/Modules/PlayerProfile/TheS.Casinova.PlayerProfile.Commands/TheS.Casinova.PlayerProfile.Commands.csproj
+++ b/src/CasinovaAll/Modules/PlayerProfile/TheS.Casinova.PlayerProfile.Commands/TheS.Casinova.PlayerProfile.Commands.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Commands\GetUserProfileCommand.cs" />
     <Compile Include="Commands\ListActionLogCommand.cs" />
     <Compile Include="Commands\RegisterUserCommand.cs" />
+    <Compile Include="Commands\VeriflyUserCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
