--- a/src/CasinovaAll/Silverlights/TheS.Casinova.Common.Silverlight/TheS.Casinova.Common.Silverlight.csproj
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.Common.Silverlight/TheS.Casinova.Common.Silverlight.csproj
@@ -47,15 +47,24 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
+    <Reference Include="System.ComponentModel.Composition, Version=2.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Windows" />
     <Reference Include="system" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Controls, Version=2.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Windows.Controls.Navigation, Version=2.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Net" />
     <Reference Include="System.Windows.Browser" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Common\Class1.cs" />
+    <Compile Include="Common\ExportContentNavigationAttribute.cs" />
+    <Compile Include="Common\ExportPopupContentAttribute.cs" />
+    <Compile Include="Common\IContentNavigationMetadata.cs" />
+    <Compile Include="Common\IGameApplicationInformation.cs" />
+    <Compile Include="Common\IModuleLoader.cs" />
+    <Compile Include="Common\IPopupContentMetadata.cs" />
+    <Compile Include="Common\NavigableContentHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Silverlight\$(SilverlightVersion)\Microsoft.Silverlight.CSharp.targets" />
