--- a/src/CasinovaAll/Silverlights/TheS.Casinova.SupportContent.Silverlight/TheS.Casinova.SupportContent.Silverlight.csproj
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.SupportContent.Silverlight/TheS.Casinova.SupportContent.Silverlight.csproj
@@ -61,6 +61,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
+    <Reference Include="System.ComponentModel.Composition, Version=2.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.ComponentModel.Composition.Initialization, Version=2.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Windows" />
     <Reference Include="system" />
     <Reference Include="System.Core" />
@@ -73,6 +75,8 @@
     <Reference Include="System.Windows.Browser" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SupportContent\GameApplicationLoader.cs" />
+    <Compile Include="SupportContent\ModuleLoaderAdapter.cs" />
     <Compile Include="SupportContent\Silverlight\App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
