- แก้ไข Chat ให้ไปอยู่ใน project ที่ถูกต้อง - เพิ่ม UI ของหน้า Fortune, ChipExchange
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/CasinovaAll/Silverlights/TheS.Casinova.Chat.Silverlight/TheS.Casinova.Chat.Silverlight.csproj
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.Chat.Silverlight/TheS.Casinova.Chat.Silverlight.csproj
@@ -73,6 +73,9 @@
     <Reference Include="System.Windows.Browser" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Chat\Controls\ChatUI.xaml.cs">
+      <DependentUpon>ChatUI.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Chat\Silverlight\App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
@@ -86,6 +89,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
+    <Page Include="Chat\Controls\ChatUI.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Chat\Silverlight\MainPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
