Module PlayerProfile : finist RegisterUserSteps.cs, VeriflyUserSteps.cs
Signed-off-by: sirinarin <sirinarin@perfenterprise.com>

--- a/src/CasinovaAll/Specs/TheS.Casinova.PlayerProfile.BackServices.Specs/TheS.Casinova.PlayerProfile.BackServices.Specs.csproj
+++ b/src/CasinovaAll/Specs/TheS.Casinova.PlayerProfile.BackServices.Specs/TheS.Casinova.PlayerProfile.BackServices.Specs.csproj
@@ -76,6 +76,8 @@
     </Compile>
     <Compile Include="BackServices\Specs\Steps\CommonSteps.cs" />
     <Compile Include="BackServices\Specs\Steps\PlayerProfileStepsBase.cs" />
+    <Compile Include="BackServices\Specs\Steps\RegisterUserSteps.cs" />
+    <Compile Include="BackServices\Specs\Steps\VeriflyUserSteps.cs" />
     <Compile Include="BackServices\Specs\VeriflyUser.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
