Add interface INavigablePage to enable any pages and user controls, which load dynamically from MEF, accessible to NavigationService.
Signed-off-by: Teerachai <tlaothong@gmail.com>

--- a/src/CasinovaAll/Silverlights/TheS.Casinova.Common.Silverlight/TheS.Casinova.Common.Silverlight.csproj
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.Common.Silverlight/TheS.Casinova.Common.Silverlight.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Common\IContentNavigationMetadata.cs" />
     <Compile Include="Common\IGameApplicationInformation.cs" />
     <Compile Include="Common\IModuleLoader.cs" />
+    <Compile Include="Common\INavigablePage.cs" />
     <Compile Include="Common\IPopupContentMetadata.cs" />
     <Compile Include="Common\NavigableContentHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
