--- a/src/CasinovaAll/Silverlights/TheS.Casinova.MagicNine.Silverlight/TheS.Casinova.MagicNine.Silverlight.csproj
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.MagicNine.Silverlight/TheS.Casinova.MagicNine.Silverlight.csproj
@@ -61,6 +61,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
+    <Reference Include="PerfEx.Infrastructure.Silverlight">
+      <HintPath>..\..\..\..\lib\PerfEx.Infrastructure.Silverlight.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows" />
     <Reference Include="system" />
     <Reference Include="System.Core" />
@@ -79,6 +82,8 @@
     <Compile Include="MagicNine\Silverlight\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MagicNine\ViewModels\MainPageViewModel.cs" />
+    <Compile Include="MagicNine\ViewModels\TimeIntervalViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
