--- a/src/CasinovaAll/Silverlights/TheS.Casinova.SupportContent.Silverlight/TheS.Casinova.SupportContent.Silverlight.csproj
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.SupportContent.Silverlight/TheS.Casinova.SupportContent.Silverlight.csproj
@@ -84,6 +84,9 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SupportContent\Views\PolicyWindow.xaml.cs">
+      <DependentUpon>PolicyWindow.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="SupportContent\Silverlight\App.xaml">
@@ -91,6 +94,10 @@
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
     <Page Include="SupportContent\Silverlight\MainPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SupportContent\Views\PolicyWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
