--- a/src/CasinovaAll/Modules/PlayerProfile/TheS.Casinova.PlayerProfile.DAL.BackContracts/TheS.Casinova.PlayerProfile.DAL.BackContracts.csproj
+++ b/src/CasinovaAll/Modules/PlayerProfile/TheS.Casinova.PlayerProfile.DAL.BackContracts/TheS.Casinova.PlayerProfile.DAL.BackContracts.csproj
@@ -46,13 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\GetUserByEmailCommand.cs" />
     <Compile Include="DAL\IPlayerProfileDataAccess.cs" />
     <Compile Include="DAL\IPlayerProfileDataBackQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Commands\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\TheS.Casinova.Common.Models\TheS.Casinova.Common.Models.csproj">
       <Project>{6079CFCD-811A-4962-B021-8D3D14C0C45B}</Project>
