--- a/src/CasinovaAll/Specs/TheS.Casinova.PlayerProfile.BackServices.Specs/TheS.Casinova.PlayerProfile.BackServices.Specs.csproj
+++ b/src/CasinovaAll/Specs/TheS.Casinova.PlayerProfile.BackServices.Specs/TheS.Casinova.PlayerProfile.BackServices.Specs.csproj
@@ -74,6 +74,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>RegisterUser.feature</DependentUpon>
     </Compile>
+    <Compile Include="BackServices\Specs\Steps\ChangeEmailSteps.cs" />
+    <Compile Include="BackServices\Specs\Steps\ChangePasswordSteps.cs" />
     <Compile Include="BackServices\Specs\Steps\CommonSteps.cs" />
     <Compile Include="BackServices\Specs\Steps\PlayerProfileStepsBase.cs" />
     <Compile Include="BackServices\Specs\Steps\RegisterUserSteps.cs" />
