--- a/src/CasinovaAll/Modules/PlayerAccount/TheS.Casinova.PlayerAccount.Commands/TheS.Casinova.PlayerAccount.Commands.csproj
+++ b/src/CasinovaAll/Modules/PlayerAccount/TheS.Casinova.PlayerAccount.Commands/TheS.Casinova.PlayerAccount.Commands.csproj
@@ -40,11 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\CancelPlayerAccountCommand.cs" />
+    <Compile Include="Commands\CreatePlayerAccountCommand.cs" />
+    <Compile Include="Commands\EditPlayerAccountCommand.cs" />
+    <Compile Include="Commands\GetPlayerAccountCommand.cs" />
+    <Compile Include="Commands\ListPlayerAccountCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Commands\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\TheS.Casinova.Common.Commands\TheS.Casinova.Common.Commands.csproj">
       <Project>{B0BA601A-7B65-4973-9E00-4F9035883877}</Project>
