Add an interface to support game statistics and attribute for MEF.
Signed-off-by: Teerachai <tlaothong@gmail.com>

--- a/src/CasinovaAll/Silverlights/TheS.Casinova.Common.Silverlight/TheS.Casinova.Common.Silverlight.csproj
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.Common.Silverlight/TheS.Casinova.Common.Silverlight.csproj
@@ -59,9 +59,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\ExportContentNavigationAttribute.cs" />
+    <Compile Include="Common\ExportGameStatContentAttribute.cs" />
     <Compile Include="Common\ExportPopupContentAttribute.cs" />
     <Compile Include="Common\IContentNavigationMetadata.cs" />
     <Compile Include="Common\IGameApplicationInformation.cs" />
+    <Compile Include="Common\IGameStatContentMetadata.cs" />
     <Compile Include="Common\IModuleLoader.cs" />
     <Compile Include="Common\INavigablePage.cs" />
     <Compile Include="Common\IPopupContentMetadata.cs" />
