--- a/src/CasinovaAll/Silverlights/TheS.Casinova.Fortune.Silverlight/TheS.Casinova.Fortune.Silverlight.csproj
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.Fortune.Silverlight/TheS.Casinova.Fortune.Silverlight.csproj
@@ -64,6 +64,9 @@
   <ItemGroup>
     <Reference Include="Microsoft.Expression.Interactions" />
     <Reference Include="mscorlib" />
+    <Reference Include="PerfEx.Infrastructure.Silverlight">
+      <HintPath>..\..\..\..\lib\PerfEx.Infrastructure.Silverlight.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows" />
     <Reference Include="system" />
     <Reference Include="System.Core" />
@@ -83,6 +86,7 @@
     <Compile Include="Fortune\Silverlight\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Fortune\ViewModels\FortuneModel.cs" />
     <Compile Include="Fortune\Views\FortuneWindow.xaml.cs">
       <DependentUpon>FortuneWindow.xaml</DependentUpon>
     </Compile>
@@ -110,6 +114,9 @@
       <Project>{3613EAFB-E876-47F0-BFE9-7E9D8DCF5E5A}</Project>
       <Name>TheS.Casinova.Common.Silverlight</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Silverlight\$(SilverlightVersion)\Microsoft.Silverlight.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
