--- a/src/CasinovaAll/Modules/PlayerProfile/TheS.Casinova.PlayerProfile.DAL.Contracts/TheS.Casinova.PlayerProfile.DAL.Contracts.csproj
+++ b/src/CasinovaAll/Modules/PlayerProfile/TheS.Casinova.PlayerProfile.DAL.Contracts/TheS.Casinova.PlayerProfile.DAL.Contracts.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PerfEx.Infrastructure">
+      <HintPath>..\..\..\..\..\lib\PerfEx.Infrastructure.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,11 +43,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Command\CheckEmailCommand.cs" />
+    <Compile Include="Command\CheckUplineCommand.cs" />
+    <Compile Include="Command\CheckUserNameCommand.cs" />
+    <Compile Include="Command\GetPlayerEmailCommand.cs" />
+    <Compile Include="Command\GetPlayerPasswordCommand.cs" />
+    <Compile Include="DAL\IPlayerProfileDataQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="DAL\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\TheS.Casinova.Common.Commands\TheS.Casinova.Common.Commands.csproj">
       <Project>{B0BA601A-7B65-4973-9E00-4F9035883877}</Project>
