--- a/src/CasinovaAll/Modules/PlayerProfile/TheS.Casinova.PlayerProfile.WebExecutors/TheS.Casinova.PlayerProfile.WebExecutors.csproj
+++ b/src/CasinovaAll/Modules/PlayerProfile/TheS.Casinova.PlayerProfile.WebExecutors/TheS.Casinova.PlayerProfile.WebExecutors.csproj
@@ -31,6 +31,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PerfEx.Infrastructure">
+      <HintPath>..\..\..\..\..\lib\PerfEx.Infrastructure.dll</HintPath>
+    </Reference>
+    <Reference Include="PerfEx.Infrastructure.Advanced">
+      <HintPath>..\..\..\..\..\lib\PerfEx.Infrastructure.Advanced.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,11 +47,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebExecutors\ChangeEmailExecutor.cs" />
+    <Compile Include="WebExecutors\ChangePasswordExecutor.cs" />
+    <Compile Include="WebExecutors\GetUserProfileExecutor.cs" />
+    <Compile Include="WebExecutors\ListActionLogExecutor.cs" />
+    <Compile Include="WebExecutors\RegisterUserExecutor.cs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="WebExecutors\" />
-  </ItemGroup>
-  <ItemGroup>
+    <ProjectReference Include="..\..\Chat\TheS.Casinova.Chat.DAL.Contracts\TheS.Casinova.Chat.DAL.Contracts.csproj">
+      <Project>{0C3F94F0-C217-49D7-8DF5-7978628091ED}</Project>
+      <Name>TheS.Casinova.Chat.DAL.Contracts</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Shared\TheS.Casinova.Common.Commands\TheS.Casinova.Common.Commands.csproj">
       <Project>{B0BA601A-7B65-4973-9E00-4F9035883877}</Project>
       <Name>TheS.Casinova.Common.Commands</Name>
